fixed history card spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ li {
 
 .history-card {
     position: absolute;
-    top: 375px;
+    top: 300px;
     left: 0px;
     padding: 10px;
     margin: 10px;
